# GirlsBandColor

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
doc/: README-jp.md  README-zh.md  colorlist.md
src/gbcolor/: __init__.py  btr.py  gbc.py
src/gbcolor/bangdream/: __init__.py  mujica.py  mygo.py  paspale.py  popipa.py  roselia.py
